[gd_scene format=3 uid="uid://cdfetrgmxtpxs"]

[ext_resource type="Script" uid="uid://djoln41hqjjxi" path="res://menus/interface.gd" id="1_27vvk"]
[ext_resource type="Material" uid="uid://pylwj71dvexw" path="res://materials/canvas_unshaded.tres" id="2_jne5a"]
[ext_resource type="FontFile" uid="uid://d263q0lpohl03" path="res://assets/font/PressStart2P-Regular.ttf" id="2_qd775"]
[ext_resource type="Theme" uid="uid://b0qqmind4lh6k" path="res://menus/ui_theme.tres" id="3_jne5a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qd775"]
bg_color = Color(0, 0, 0, 1)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jne5a"]
bg_color = Color(0.4392157, 0, 0.07058824, 1)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d8u0x"]
bg_color = Color(0.33474356, 0.3347436, 0.33474344, 1)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fxk1b"]
bg_color = Color(1, 1, 1, 1)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_evbm3"]
bg_color = Color(0, 0, 0, 0.7529412)
corner_detail = 1

[node name="Interface" type="Control" unique_id=55518087]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_27vvk")

[node name="HealthBar" type="ProgressBar" parent="." unique_id=1367495757]
material = ExtResource("2_jne5a")
layout_mode = 0
offset_left = 20.0
offset_top = 601.0
offset_right = 232.0
offset_bottom = 628.0
theme_override_fonts/font = ExtResource("2_qd775")
theme_override_styles/background = SubResource("StyleBoxFlat_qd775")
theme_override_styles/fill = SubResource("StyleBoxFlat_jne5a")
max_value = 10.0
step = 1.0
value = 5.0

[node name="AttackCountDown" type="ProgressBar" parent="." unique_id=165589873]
material = ExtResource("2_jne5a")
layout_mode = 0
offset_left = 512.0
offset_top = 500.0
offset_right = 640.0
offset_bottom = 510.0
theme_override_styles/background = SubResource("StyleBoxFlat_d8u0x")
theme_override_styles/fill = SubResource("StyleBoxFlat_fxk1b")
value = 75.0
show_percentage = false

[node name="PauseMenu" type="Panel" parent="." unique_id=7342454]
layout_mode = 1
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxFlat_evbm3")

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu" unique_id=1788679540]
layout_mode = 0
offset_left = 539.0
offset_top = 289.0
offset_right = 579.0
offset_bottom = 329.0

[node name="Label" type="Label" parent="PauseMenu/VBoxContainer" unique_id=352409243]
layout_mode = 2
text = "Pause"

[node name="Quit" type="Button" parent="PauseMenu/VBoxContainer" unique_id=447377266]
layout_mode = 2
theme = ExtResource("3_jne5a")
text = "Quit
"

[connection signal="pressed" from="PauseMenu/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
